<resources>
    <string name="app_name">Challenge5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="landing_title_1">Bermain suit melawan sesama pemain</string>
    <string name="landing_title_2">Bermain suit melawan komputer</string>
    <string name="landing_title_3">Tuliskan namamu di bawah</string>
    <string name="menu_title">PILIH LAWAN MU</string>
    <string name="vs_pemain">%1$s vs Pemain</string>
    <string name="vs_cpu">%1$s vs CPU</string>
    <string name="warning_name_empty">Nama tidak boleh kosong</string>
    <string name="tutup">Tutup</string>
    <string name="welcome">Selamat Datang %1$s</string>
    <string name="button_next">Button Next</string>
    <string name="splash_logo">Splash Logo</string>
    <string name="pilihan_1">Pilihan 1</string>
    <string name="pilihan_2">pilihan 2</string>
    <string name="logo">Logo</string>
    <string name="batu">Batu</string>
    <string name="kertas">Kertas</string>
    <string name="gunting">Gunting</string>
    <string name="vs">VS</string>
    <string name="refresh">Refresh</string>
    <string name="exit">Exit</string>
    <string name="name">Name</string>
    <string name="pemain2_cpu">CPU</string>
    <string name="draw">Draw</string>
    <string name="result_text_p1_menang">Pemain 1 MENANG</string>

    <string name="toast_choice_batu">%1$s memilih Batu</string>
    <string name="toast_choice_kertas">%1$s memilih Kertas</string>
    <string name="toast_choice_gunting">%1$s memilih Gunting</string>
    <string name="pemain2_player">Pemain 2</string>
    <string name="pemain_2">Pemain 2</string>
    <string name="result_p2_menang">Pemain 2 Menang</string>
    <string name="result_com_menang">COM Menang</string>
    <string name="menang">MENANG!</string>
    <string name="main_lagi">Main Lagi</string>
    <string name="kembali_ke_menu">Kembali Ke Menu</string>
    <string name="hasil_permainan">Hasil Permainan</string>
    <string name="ervin">Ervin</string>
    <string name="seri">Seri!</string>


</resources>