<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/layout_dialog_bg"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasil_permainan"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/ervin"/>

    <TextView
        android:id="@+id/tvMenang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/menang"/>

    <Button
        android:id="@+id/btnPlayAgain"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_play_again"
        android:text="@string/main_lagi"/>

    <Button
        android:id="@+id/BackToMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_kembali_menu"
        android:text="@string/kembali_ke_menu"
        android:textColor="@color/black"/>

</LinearLayout>