<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.PlayActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPlayer1"
        style="@style/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/ivBatu"
        app:layout_constraintEnd_toEndOf="@id/ivBatu"
        app:layout_constraintStart_toStartOf="@id/ivBatu"
        tools:text="Pemain 1" />

    <ImageView
        android:id="@+id/ivBatu"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/batu"
        android:src="@drawable/ic_batu"
        app:layout_constraintBottom_toTopOf="@id/ivKertas"
        app:layout_constraintEnd_toEndOf="@id/ivKertas"
        app:layout_constraintStart_toStartOf="@id/ivKertas"

        />

    <ImageView
        android:id="@+id/ivKertas"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/kertas"
        android:src="@drawable/ic_kertas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivGunting"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/gunting"
        android:src="@drawable/ic_gunting"
        app:layout_constraintEnd_toEndOf="@id/ivKertas"
        app:layout_constraintStart_toStartOf="@id/ivKertas"
        app:layout_constraintTop_toBottomOf="@id/ivKertas" />

    <TextView
        android:id="@+id/tvPlayer2"
        style="@style/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/ivBatuCom"
        app:layout_constraintEnd_toEndOf="@id/ivBatuCom"
        app:layout_constraintStart_toStartOf="@id/ivBatuCom"
        tools:text="Pemain 2" />

    <ImageView
        android:id="@+id/ivBatuCom"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/batu"
        android:src="@drawable/ic_batu"
        app:layout_constraintBottom_toTopOf="@id/ivKertasCom"
        app:layout_constraintEnd_toEndOf="@id/ivKertasCom"
        app:layout_constraintStart_toStartOf="@id/ivKertasCom" />

    <ImageView
        android:id="@+id/ivKertasCom"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/kertas"
        android:src="@drawable/ic_kertas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivGuntingCom"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/gunting"
        android:src="@drawable/ic_gunting"
        app:layout_constraintEnd_toEndOf="@id/ivKertasCom"
        app:layout_constraintStart_toStartOf="@id/ivKertasCom"
        app:layout_constraintTop_toBottomOf="@id/ivKertasCom" />

    <TextView
        android:id="@+id/tvResult"
        style="@style/result_vs"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:rotation="-15"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ivKertasCom"
        app:layout_constraintStart_toEndOf="@id/ivKertas"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/vs"
        tools:text="VS" />

    <ImageView
        android:id="@+id/ivReset"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/refresh"
        android:src="@drawable/ic_refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivExit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/exit"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>